--- a/monitoring/iac/monitoring.yaml
+++ b/monitoring/iac/monitoring.yaml
@@ -2,6 +2,17 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Stack Monitoring DevOps Wilton 
 
+Parameters: 
+  TagsProject: 
+    Type: String 
+    Default: "Devops"
+  TagsTeam: 
+    Type: String 
+    Default: "Adatech"
+  ImageID: 
+    Type: String 
+    Default: "ami-03c951bbe993ea087"  
+
 Resources:
   # Inicio do Recurso SG
   MonitoringSG:
@@ -17,12 +28,19 @@ Resources:
           FromPort: 443 
           ToPort: 443
           CidrIp: 0.0.0.0/0
-  
+      Tags:
+        - Key: Name 
+          Value: sg-monitoring 
+        - Key: Project 
+          Value: !Ref TagsProject
+        - Key: Team 
+          Value: !Ref TagsTeam
+
   # Inicio do recurso EC2
   MonitoringInstance: 
     Type: AWS::EC2::Instance
     Properties: 
-      ImageId: "ami-03c951bbe993ea087"
+      ImageId: !Ref ImageID
       InstanceType: t2.micro
       SecurityGroups: 
         - !Ref MonitoringSG
@@ -30,8 +48,16 @@ Resources:
       UserData: 
         Fn::Base64: |
           #!/bin/bash
-          yum update -y 
-          amazon-linux-extras install docker 
-          service docker start 
-          usermod -a -G docker ec2-user
-
+          sudo yum update -y
+          sudo yum install -y docker git
+          sudo service docker start
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/bin/docker-compose
+          sudo chmod +x /usr/bin/docker-compose
+          docker-compose --version
+      Tags:
+        - Key: Name 
+          Value: instance-monitoring 
+        - Key: Project
+          Value: !Ref TagsProject
+        - Key: Team 
+          Value: !Ref TagsTeam
