--- a/monitoring/iac/monitoring.yaml
+++ b/monitoring/iac/monitoring.yaml
@@ -28,6 +28,18 @@ Resources:
           FromPort: 443 
           ToPort: 443
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 9090
+          ToPort: 9090
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 3000
+          ToPort: 3000
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 9093
+          ToPort: 9093
+          CidrIp: 0.0.0.0/0
       Tags:
         - Key: Name 
           Value: sg-monitoring 
